Ruby 1.9.1 compliance

Dropdowns generated with :custom_filter => :auto and :custom_filter => [method chain] are now ordered by option labels

how_filters => false is the same as :show_filters => :no and :show_filters => true is the same as :show_filters => :always

action_column - Adds a column with checkboxes for each record. 
Useful for actions with multiple records, for example, delete
the selected records.

using merge_conditions to merge conditions :)

WiceGrid is now compatible with the new Rails XSS behavior which
will be the default in Rails 3.0 and can be used in Rails 2.3.5
using the rails_xss plugin.
Read http://github.com/nzkoz/rails_xss for more

wice_grid_custom_filter_params

support for with_scope and with_exclusive_scope

:total_entries parameter added to initialize_grid (will_paginate)

Localization

assert_keys wherever possible

== 0.5

Today "WiceGrid":http://leikind.org/pages/wicegrid has reached its next level of maturity and was awarded the tag of version 0.5.

This version of WiceGrid is accompanied by an application called _WiceGrid Examples_ running "online":http://grid.leikind.org/ and with source code available on  "GitHub":http://github.com/leikind/wice_grid_examples.

Here's a list of changes as compared with "version 0.4":https://blog.wice.eu/2009/7/6/moving-to-github-and-wicegrid-version-0-4 :

h4. selected_records

Method @selected_records@ of WiceGrid instances allows to  access the list of all records of the current selection throughout all pages in the context of a view:

--- RHTML
<%= grid(@tasks_grid) do |g|
   ...
end -%>

<% selected = @tasks_grid.selected_records %>
<p><%= selected.size %> records selected: <%= selected.map(&:id).to_sentence %></p>
---

"See an online example":http://grid.leikind.org/integration_with_application_view

h4. placement of filter related icons
